5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1785_1598.log
== TEST (2019-05-30 11:06:22) 
-- CODE:
from numpy import *
vet = array(eval(input("Custo dos itens: ")))
i = 0
soma = 0
desc = 0
while(i <= size(vet)):
	soma = soma + vet[i]
	if(vet[i] > 80):
		desc = desc + 1
	i = i + 1
total = soma - desc * 5
print(round(total,2))
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:07:50) 
-- CODE:
from numpy import *
vet = array(eval(input("Custo dos itens: ")))
i = 0
soma = 0
desc = 0
while(i < size(vet)):
	soma = soma + vet[i]
	if(vet[i] > 80):
		desc = desc + 1
	i = i + 1
total = soma - desc * 5
print(round(total,2))
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:08:06) 
-- CODE:
from numpy import *
vet = array(eval(input("Custo dos itens: ")))
i = 0
soma = 0
desc = 0
while(i < size(vet)):
	soma = soma + vet[i]
	if(vet[i] => 80):
		desc = desc + 1
	i = i + 1
total = soma - desc * 5
print(round(total,2))
		
	
-- ERROR:
File "XXXX", line 8
    if(vet[i] => 80):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:08:12) 
-- CODE:
from numpy import *
vet = array(eval(input("Custo dos itens: ")))
i = 0
soma = 0
desc = 0
while(i < size(vet)):
	soma = soma + vet[i]
	if(vet[i] >= 80):
		desc = desc + 1
	i = i + 1
total = soma - desc * 5
print(round(total,2))
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:08:27) 
-- CODE:
from numpy import *
vet = array(eval(input("Custo dos itens: ")))
i = 0
soma = 0
desc = 0
while(i < size(vet)):
	soma = soma + vet[i]
	if(vet[i] >= 80):
		desc = desc + 1
	i = i + 1
total = soma - desc * 5
print(round(total,2))
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:08:43) 
-- CODE:
from numpy import *
vet = array(eval(input("Custo dos itens: ")))
i = 0
soma = 0
desc = 0
while(i < size(vet)):
	soma = soma + vet[i]
	if(vet[i] >= 80):
		desc = desc + 1
	i = i + 1
total = soma - desc * 5
print(round(total,2))
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:09:08) 
-- CODE:
from numpy import *
vet = array(eval(input("Custo dos itens: ")))
i = 0
soma = 0
desc = 0
while(i < size(vet)):
	soma = soma + vet[i]
	if(vet[i] >= 80):
		desc = desc + 1
	i = i + 1
total = soma - desc * 5
print(round(total,2))
		
	
-- EXECUTION TIME:
0.529425
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
